--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -8,6 +8,10 @@
 	</head>
 	<body>
 		<div class="topnav" id="navbar">
+			<a href="about.html" class="active">About</a>
+			<a href="contact.html">Contact us</a>
+		</div>
+		<div class="button" id="btn-1" onclick="toggle()">Change Theme</div>
 		<script src="/static/script.js"></script>
 	</body>
 </html>
