--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -28,8 +28,8 @@ body {
 	background-color: inherit;
 	font-family: Arial, Helvetica, sans-serif;
 	color: rgb(20, 34, 43);
-	padding: 13px;
 	float: left;
+	padding: 13px;
 	margin: 0;
 	transition: 0.30s;
 	height: inherit;
@@ -52,4 +52,32 @@ body {
 	text-align: center;
 	border: 2px double rgb(4, 54, 70);
 	border-radius: 5px;
+}
+
+.icon {
+	display: none;
+}
+
+@media screen and (max-width: 600px) {
+	.topnav a:not(:first-child) {
+		display: none;
+	}
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.topnav.responsive {position: relative;}
+	.topnav.responsive a.icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: center;
+	}
 }
