Added about page

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -8,10 +8,10 @@
 	</head>
 	<body>
 		<div class="topnav" id="navbar">
-			<a href="index.html" class="active">Home</a>
-			<a href="about.html">About</a>
-			<a href="contact.html">Contact us</a>
-			<a href="javascript:void(0);" class="icon" onclick="topnav_responsive">
+			<a href="/pages/index.html" class="active">Home</a>
+			<a href="/pages/about.html">About</a>
+			<a href="/pages/contact.html">Contact us</a>
+			<a href="javascript:void(0);" class="icon" onclick="topnav_responsive()">
 				<i class="fa fa-bars"></i>
 			</a>
 		</div>
