--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -41,6 +41,10 @@ body {
 	color: #000;
 }
 
+.topnav a.active {
+	background-color: rgb(50, 93, 105);
+}
+
 #btn-1 {
 	background-color: rgb(5, 60, 133);
 	padding: 7px;
@@ -54,7 +58,7 @@ body {
 	border-radius: 5px;
 }
 
-.icon {
+.topnav .icon {
 	display: none;
 }
 
@@ -80,4 +84,46 @@ body {
 		display: block;
 		text-align: center;
 	}
+}
+
+#header-1 {
+	font-size: 40px;
+	position: relative;
+	text-shadow: 2px 1px 3px rgb(73, 73, 73);
+}
+
+#paragraph-1 {
+	font-size: 21px;
+	width: 710px;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+img {
+	visibility: visible;
+	position: relative;
+	left: 345px;
+	border: 2px double rgb(107, 107, 107);
+	margin: 0;
+	box-shadow: 0px 8px 16px 0px rgba(117, 54, 129, 0.87);
+	float: left;
+}
+
+.image p {
+	position: relative;
+	outline: 2px solid #000;
+	padding: 3px;
+	left: 349px;
+	margin: 0;
+	float: left;
+}
+
+@media screen and (max-width: 600px) {
+	img {width: 200px;}
+	#header-1 {font-size: 20px;}
+	.image p {width: 200px; display: none;}
+}
+
+@media screen and (max-width: 800px) {
+	img{position: relative; left: 0; float: none;}
+	.image p {display: none;}
 }
