--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -63,6 +63,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+	.topnav {width: 100%;}
 	.topnav a:not(:first-child) {
 		display: none;
 	}
@@ -90,6 +91,13 @@ body {
 	font-size: 40px;
 	position: relative;
 	text-shadow: 2px 1px 3px rgb(73, 73, 73);
+}
+
+#header-2 {
+	font-weight: 0;
+	font-size: 40px;
+	text-shadow: 2px 1px 3px rgb(73, 73, 73);
+	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #paragraph-1 {
@@ -126,4 +134,36 @@ img {
 @media screen and (max-width: 800px) {
 	img{position: relative; left: 0; float: none;}
 	.image p {display: none;}
+}
+
+label {
+	display: block;
+}
+
+#name, #email, #message {
+	margin: 3px;
+}
+
+#name, #email {
+	padding: 2px;
+	width: 580px;
+	height: 30px;
+	border: 2px ridge #fff;
+	outline: none;
+	border-radius: 5px;
+}
+
+#name, #email::placeholder {
+	margin: 1px;
+	font-size: 11px;
+}
+
+#message {
+	padding: 3px;
+	width: 580px;
+	height: 100px;
+}
+
+@media screen and (max-width: 600px) {
+	#name, #email, #message {width: 80%;}
 }
