removed theme-toggle (to be reimplemented) updated home file and css

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -15,8 +15,12 @@
 				<i class="fa fa-bars"></i>
 			</a>
 		</div>
-		<br><br><br>
-		<div class="button" id="btn-1" onclick="toggle()">Change Theme</div>
+		<center>
+			<h1 id="header-3">Welcome!</h1>
+			<br><br>
+			<h4>You can learn more about us in the <a href="/pages/about.html">About</a> page! </h4>
+		</center>
+		<!--<div class="button" id="btn-1" onclick="toggle()">Change Theme</div>-->
 		<script src="/static/script.js"></script>
 	</body>
 </html>
