--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -20,13 +20,13 @@
 			<h1 id="header-2">Contact Us</h1>
 		<form action="/contact" id="contact-form" method="post" role="form">
 				<label for="name">Name</label>
-				<input id="name" name="name" type="text" 	placeholder="Name..." required></input>
+				<input id="name" name="name" type="text" 	placeholder="Name..." required></input><br>
 
 				<label for="email">Email</label>
-				<input id="email" name="email" type="text" placeholder="Email Address..." required></label>
+				<input id="email" name="email" type="text" placeholder="Email Address..." required></label><br>
 
 				<label for="message">Message</label>
-				<textarea id="message" name="message" placeholder="Message" rows="3" required></textarea>
+				<textarea id="message" name="message" placeholder="Message" rows="3" required></textarea><br>
 
 				<br>
 				<button id="btn-1" onclick="document.location = 'index.html'" type="submit">Submit</button>
