added more content to the homepage

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -39,8 +39,10 @@
 		<center>
 			<h1 id="header-3">Welcome!</h1>
 			<br><br>
-			<img src="/media/placeholder.png">
+			<h4>Hope you enjoy your time here! There absolutly nothing to do at all but in your version you can add your main content here  </h4>
 			<h4>You can learn more about us in the <a href="/pages/about.html">About</a> page!</h4>
+			<img src="/media/placeholder.png" id="img-1">
+			<h4>Possible things you could do are write a blog, make a personal website about yourself bascially anything, please feel free to suggest stuff to add to the template</h4>
 			<h5>Have a problem? Feel free to <a href="/pages/contact.html">Contact Us</a>
 		</center>
 		<!--<div class="button" id="btn-1" onclick="toggle()">Change Theme</div>-->
