--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -28,6 +28,11 @@
 			<h3>This is a header where you can describe your policies or whatever</h3>
 			<p id="paragraph-1">Also may I add you can fork this on repl.it or github and change the text to whatever you need some knowledge in HTML would be useful but not neccesary. I have commented what each element does</p>
 		</center>
+		<div class="footer">
+			<h4>Link to your socials</h4>
+			<a href="https://github.com/k9chelsea2/Website-Template">Github</a>
+			<a href="https://repl.it/languages">Repl.it</a>
+		</div>
 		<script src="/static/script.js"></script>
 	</body>
 </html>
