--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -32,6 +32,14 @@
 				<button id="btn-1" onclick="document.location = 'index.html'" type="submit">Submit</button>
 		</form>
 		</center>
+		<div class="footer">
+			<h4>Link to your socials</h4>
+			<a href="https://github.com/k9chelsea2/Website-Template">Github</a>
+			<a href="https://repl.it/languages">Repl.it</a>
+			<style> 
+			.footer {position: absolute;}
+			</style>
+		</div>
 		<script src="/static/script.js"></script>
 	</body>
 </html>
