--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -43,8 +43,16 @@
 			<h4>You can learn more about us in the <a href="/pages/about.html">About</a> page!</h4>
 			<img src="/media/placeholder.png" id="img-1">
 			<h4>Possible things you could do are write a blog, make a personal website about yourself bascially anything, please feel free to suggest stuff to add to the template</h4>
+			<br><br><br>
 			<h5>Have a problem? Feel free to <a href="/pages/contact.html">Contact Us</a>
+			<br><br><br>
 		</center>
+		<br><br><br>
+		<div class="footer">
+			<h4>Link to your socials</h4>
+			<a href="https://github.com/k9chelsea2/Website-Template">Github</a>
+			<a href="https://repl.it/languages">Repl.it</a>
+		</div>
 		<!--<div class="button" id="btn-1" onclick="toggle()">Change Theme</div>-->
 		<script src="/static/script.js"></script>
 	</body>
