--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -52,6 +52,9 @@
 			<h4>Link to your socials</h4>
 			<a href="https://github.com/k9chelsea2/Website-Template">Github</a>
 			<a href="https://repl.it/languages">Repl.it</a>
+			<style>
+				.footer {position: absolute;}
+			</style>
 		</div>
 		<!--<div class="button" id="btn-1" onclick="toggle()">Change Theme</div>-->
 		<script src="/static/script.js"></script>
