--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
@@ -20,12 +20,12 @@
 			<br>
 			<p id="paragraph-1">This is a paragraph, you write things here, I am waffling because this paragraph needs to be big enough for it to look good on the website so yeah, you can change the wording here to the actual information about the website this is just the default text which I reccomend you remove, what else can I say… Credit to Repl.it for exsisting without it, this template would not exsist. How long to About pages tend to be? Ill end it here I guess, nice talking to you even though i'M NOT LITERALLY TALKING TO YOU SPECIFICALLY OR ANYONE FOR THAT MATTER OOPS MY SHIFT KEY GOT STUCK SORRY FOR THE CAPS BAI.</p>
 			<div class="image">
-				<img src="/media/code.png">
+				<img title="Add an image of your choice here" src="/media/code.png" alt="code display">
 				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 				<p>People tend to add images to their about pages so yeh lol</p>
 			</div>
 			<br><br><br><br><br>
-			<h3>This is a header where you can describe your policies or whatever</h3>
+			<h3 title="feel free to add anything">This is a header where you can describe your policies or whatever</h3>
 			<p id="paragraph-1">Also may I add you can fork this on repl.it or github and change the text to whatever you need some knowledge in HTML would be useful but not neccesary. I have commented what each element does</p>
 		</center>
 		<br><br>
