--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html color-mode="light">
+<html color-mode="light" lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
@@ -41,7 +41,7 @@
 			<br><br>
 			<h4>Hope you enjoy your time here! There absolutly nothing to do at all but in your version you can add your main content here  </h4>
 			<h4>You can learn more about us in the <a href="/pages/about.html">About</a> page!</h4>
-			<img src="/media/placeholder.png" id="img-1">
+			<img src="/media/placeholder.png" id="img-1" alt="placeholder">
 			<h4>Possible things you could do are write a blog, make a personal website about yourself bascially anything, please feel free to suggest stuff to add to the template</h4>
 			<br><br><br>
 			<h5>Have a problem? Feel free to <a href="/pages/contact.html">Contact Us</a>
@@ -53,7 +53,7 @@
 			<a href="https://github.com/k9chelsea2/Website-Template">Github</a>
 			<a href="https://repl.it/languages">Repl.it</a>
 			<style>
-				.footer {position: absolute;}
+				.footer {position: absolute; @media screen and (max-width: 1000px) {position: relative;}}
 			</style>
 		</div>
 		<!--<div class="button" id="btn-1" onclick="toggle()">Change Theme</div>-->
