fixed topnav, fixed input field styling

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width">
 		<title> Website Template | Contact us</title>
 		<link rel="stylesheet" href="/static/style.css" type="text/css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
 		<div class="topnav" id="navbar">
@@ -18,6 +19,7 @@
 		<center>
 			<br>
 			<h1 id="header-2">Contact Us</h1>
+			<!--contact form-->
 		<form action="/contact" id="contact-form" method="post" role="form">
 				<label for="name">Name</label>
 				<input id="name" name="name" type="text" 	placeholder="Name..." required></input><br>
