--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width">
 		<title>Website Template | About</title>
 		<link rel="stylesheet" href="/static/style.css" type="text/css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
 		<div class="topnav" id="navbar">
@@ -16,6 +17,7 @@
 			</a>
 		</div>
 		<center>
+			<!--about me content-->
 			<h1 id="header-1">About This Website</h1>
 			<br>
 			<p id="paragraph-1">This is a paragraph, you write things here, I am waffling because this paragraph needs to be big enough for it to look good on the website so yeah, you can change the wording here to the actual information about the website this is just the default text which I reccomend you remove, what else can I say… Credit to Repl.it for exsisting without it, this template would not exsist. How long to About pages tend to be? Ill end it here I guess, nice talking to you even though i'M NOT LITERALLY TALKING TO YOU SPECIFICALLY OR ANYONE FOR THAT MATTER OOPS MY SHIFT KEY GOT STUCK SORRY FOR THE CAPS BAI.</p>
